# trading-backoffice

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
src/loader/: intraday_trade_loader.py  net_position_loader.py
trading_backoffice/: cli.py
trading_backoffice/trading_backoffice.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
